--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="css/styles.css">    
+        <link rel="icon" href="images/favicon.ico">
         <title>John's Personal Site</title>
     </head>
     <body>
